# Hamilton-Law

./: README.md  main.py  pyproject.toml
src/EDA/: exploreData.ipynb  report.md
src/ingestion/: chunker.py  cleaner.py  loader.py
