[project]
name = "law-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.22.0",
    "ipykernel>=7.3.0",
    "langchain-core>=1.4.8",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
